patch up index and add tags to render from the server to index.jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -55,6 +55,12 @@ html(lang='en')
         #button
             button submit ABI
 
+        #functionDiv
+            p functions
+
+            button#functionButton(name="functionButton" value = functionVal)
+            input#paramBox(name="paramBox", value = paramVals)
+
 
       .twelve.columns
 
