refactor index.js, splitted out functions and params properly, need to render them individually and add button clicks for each method and submit abi

--- a/views/index.jade
+++ b/views/index.jade
@@ -44,6 +44,8 @@ html(lang='en')
       .twelve.columns
         h6
           | Run your live ethereum smart contracts here!
+        h6
+          | #{statusLabel}
 
       #abiDiv
         #abiForm
