add base method(no code yet) for handling function clicks, nearing end of day so saving work

--- a/views/index.jade
+++ b/views/index.jade
@@ -60,7 +60,7 @@ html(lang='en')
         #functionDiv
             p functions
 
-            button#functionButton(name="functionButton" value = functionVal)
+            button#functionButton(name="functionButton" value = functionVal) #{functionName}
             input#paramBox(name="paramBox", value = paramVals)
 
 
