--- a/views/index.jade
+++ b/views/index.jade
@@ -59,38 +59,12 @@ html(lang='en')
 
         #functionDiv
             p functions
-            //TODO create dynamically
-            button#functionButton(name="functionButton") #{functionName}
-            input#paramBox(name="paramBox", placeholder=paramVals)
-
-            button#functionButton2(name="functionButton2") #{functionName2}
-            input#paramBox2(name="paramBox", placeholder=paramVals2)
-
-            button#functionButton3(name="functionButton3") #{functionName3}
-            input#paramBox3(name="paramBox", placeholder=paramVals3)
-
-            button#functionButton4(name="functionButton4") #{functionName4}
-            input#paramBox4(name="paramBox", placeholder=paramVals4)
-
-            button#functionButton5(name="functionButton5") #{functionName5}
-            input#paramBox5(name="paramBox", placeholder=paramVals5)
-
-            button#functionButton6(name="functionButton") #{functionName}
-            input#paramBox6(name="paramBox", placeholder=paramVals)
-
-            button#functionButton7(name="functionButton2") #{functionName2}
-            input#paramBox7(name="paramBox", placeholder=paramVals2)
-
-            button#functionButton8(name="functionButton3") #{functionName3}
-            input#paramBox8(name="paramBox", placeholder=paramVals3)
-
-            button#functionButton9(name="functionButton4") #{functionName4}
-            input#paramBox9(name="paramBox", placeholder=paramVals4)
-
-            button#functionButton10(name="functionButton5") #{functionName5}
-            input#paramBox10(name="paramBox", placeholder=paramVals5)
-
-
+            functionNames = []
+            functionParams = []
+            each functionName in functionNames
+              button#functionButton(name=functionName) #{functionNames[functionName]}
+            each param in functionParams
+              input#paramBox(name=param, placeholder = functionParams[param])
 
       .twelve.columns
 
