--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ html(lang='en')
       ––––––––––––––––––––––––––––––––––––––––––––––––––
     meta(charset='utf-8')
 
-    title EtherExe
+    title ContractExecutor
 
     meta(name='description', content='')
 
@@ -39,7 +39,7 @@ html(lang='en')
     .container
       .header
         h1
-          | EtherExe
+          | ContractExecutor
 
       .twelve.columns
         h6
