refactored index.js by abstracting logic to eth.js and fixing toString problem

--- a/views/index.jade
+++ b/views/index.jade
@@ -54,8 +54,8 @@ html(lang='en')
           textarea#ABI(name='ABI' ) #{abiVal}
           textarea#contractAddress(name='contractAddress' ) #{addressVal}
 
-        #button
-            button submit ABI
+        //#button
+        //    button submit ABI
 
         #functionDiv
             p functions
