buttonclick now handle individual functions and can call the server, TODO: make server call web3 api to interact with contract

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,7 @@ html(lang='en')
       ––––––––––––––––––––––––––––––––––––––––––––––––––
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
-    script(src="../public/javascripts/buttonClickHandler.js")
+    script(src="/javascripts/bundle.js")
 
     link(rel='icon', type='image/png', href='http://cryptoyeti.com/wp-content/uploads/2016/03/icon2x-300x300.png')
   body
