add submit button for abi's and addresses which are passed in the text boxes rather than http params

--- a/views/index.jade
+++ b/views/index.jade
@@ -56,9 +56,8 @@ html(lang='en')
 
           textarea#ABI(name='ABI' ) #{abiVal}
           textarea#contractAddress(name='contractAddress' ) #{addressVal}
-
-        //#button
-        //    button submit ABI
+          p
+          button#submit Submit contract
 
         #paramAndFunctionDiv
             p functions
