update readme, change function title to be dynamic when abi and contract address is provided rather than static

--- a/views/index.jade
+++ b/views/index.jade
@@ -60,7 +60,7 @@ html(lang='en')
           button#submit Submit contract
 
         #paramAndFunctionDiv
-            p functions
+            h6 #{functionTitle}
             functionNames
             functionParams
           #functionsDiv
