add placeholders for abi and contract address text boxes, add message to inform user that they need access to a node

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,5 @@
 //extends layout
 //TODO add register and search
-//TODO patch up frontend index.jade
 
 doctype html
 html(lang='en')
@@ -48,14 +47,14 @@ html(lang='en')
 
       .twelve.columns
         h6
-          | Run your live ethereum smart contracts here!
+          | Run your live ethereum smart contracts here! Please have a node running or install the metamask browser plug in
+          | to interact with the smart contracts. 
 
       #abiDiv
         #abiForm
           p
-
-          textarea#ABI(name='ABI' ) #{abiVal}
-          textarea#contractAddress(name='contractAddress' ) #{addressVal}
+          textarea#ABI(name='ABI', placeholder="Paste the smart contract's ABI here" ) #{abiVal}
+          textarea#contractAddress(name='contractAddress', placeholder="Paste the smart contracts address here" ) #{addressVal}
           p
           button#submit Submit contract
 
