make small refactors, remove unused function

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,3 @@
-//extends layout
-//TODO add register and search
-
 doctype html
 html(lang='en')
   head
@@ -9,7 +6,7 @@ html(lang='en')
       ––––––––––––––––––––––––––––––––––––––––––––––––––
     meta(charset='utf-8')
 
-    title ContractExecutor
+    title xcontract
 
     meta(name='description', content='')
 
@@ -40,7 +37,7 @@ html(lang='en')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
     script(src="/javascripts/bundle.js")
 
-    link(rel='icon', type='image/png', href='http://cryptoyeti.com/wp-content/uploads/2016/03/icon2x-300x300.png')
+    link(rel='icon', type='image/png', href='/images/favicon.png')
   body
       //Primary Page Layout
       //––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -53,7 +50,7 @@ html(lang='en')
           | xcontract
       .twelve.columns
         h6
-          | Run your live ethereum smart contracts here!
+          | Run your live smart contracts here!
         p  **Please have a node running or install the metamask browser plug in to interact with the smart contracts.**
 
       #abiDiv
