--- a/views/index.jade
+++ b/views/index.jade
@@ -55,8 +55,9 @@ html(lang='en')
 
       #abiDiv
         #abiForm
-          p
-          textarea#ABI(name='ABI', placeholder="Paste the smart contract's ABI here" ) #{abiVal}
+          p Here is the ABI:
+          textarea#ABI(name='ABI', readonly=true) #{abiVal}
+          p Here is the contract address
           textarea#contractAddress(name='contractAddress', placeholder="Paste the smart contract's address here" ) #{addressVal}
           p
           button#submit Submit contract
