add contract verification warning if a contract's source code has not been published to etherscan

--- a/views/index.jade
+++ b/views/index.jade
@@ -52,6 +52,7 @@ html(lang='en')
         h6
           | Run your live smart contracts here!
         p  **Please have a node running or install the metamask browser plug in to interact with the smart contracts.**
+        h6 #{warning}
 
       #abiDiv
         #abiForm
