add link tags to pages

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,10 +7,6 @@ html(lang='en')
     meta(charset='utf-8')
 
     title xcontract
-s
-    meta(name='description', content='')
-
-    meta(name='author', content='')
     //
       Mobile Specific Metas
       ––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -43,6 +39,14 @@ s
       //––––––––––––––––––––––––––––––––––––––––––––––––––
 
       a.github-fork-ribbon(href='https://github.com/James-Sangalli/xcontract', title='Fork me on GitHub') Fork me on GitHub
+    div
+        ul
+            li
+                a(href="/")  Home
+            li
+                a(href="/search") Search for dApps
+            li
+                a(href="/register") Register your dApp
 
     .container
       .header
