--- a/views/register.jade
+++ b/views/register.jade
@@ -43,6 +43,14 @@ html(lang='en')
         //––––––––––––––––––––––––––––––––––––––––––––––––––
 
         a.github-fork-ribbon(href='https://github.com/James-Sangalli/xcontract', title='Fork me on GitHub') Fork me on GitHub
+        div
+            ul
+                li
+                    a(href="/")  Home
+                li
+                    a(href="/search") Search for dApps
+                li
+                    a(href="/register") Register your dApp
 
     .container
         .header
