--- a/views/register.jade
+++ b/views/register.jade
@@ -48,9 +48,9 @@ html(lang='en')
                 li
                     a(href="/")  Home
                 li
-                    a(href="/search") Search for dApps
+                    a(href="/search") Search
                 li
-                    a(href="/register") Register your dApp
+                    a(href="/register") Register
 
     .container
         .header
