--- a/views/search.jade
+++ b/views/search.jade
@@ -44,9 +44,9 @@ body
             li
                 a(href="/")  Home
             li
-                a(href="/search") Search for dApps
+                a(href="/search") Search
             li
-                a(href="/register") Register your dApp
+                a(href="/register") Register
 
 .container
     .header
