--- a/views/register.jade
+++ b/views/register.jade
@@ -33,6 +33,8 @@ html(lang='en')
           ––––––––––––––––––––––––––––––––––––––––––––––––––
 
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+        script(src='/javascripts/RegisterHandler.js')
+
         link(rel='icon', type='image/png', href='/images/favicon.png')
     body
         //Primary Page Layout
@@ -62,6 +64,8 @@ html(lang='en')
             textarea#abi(placeholder="please enter the abi here")
             p
             textarea#contractAddress(placeholder="please enter the contract address here")
+            p
+            button#register Register
 
 html
 
