--- a/public/stylesheets/skeleton.css
+++ b/public/stylesheets/skeleton.css
@@ -245,7 +245,9 @@ select {
   border: 1px solid #D1D1D1;
   border-radius: 4px;
   box-shadow: none;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  min-width: 500px;
+}
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
 input[type="number"],
