patch up text on jade pages

--- a/views/search.jade
+++ b/views/search.jade
@@ -51,7 +51,7 @@ body
 .container
     .header
         h1
-            | xcontract search
+            | Search for dApps
     .twelve.columns
         h6
             | Search for smart contracts here
