--- a/public/stylesheets/skeleton.css
+++ b/public/stylesheets/skeleton.css
@@ -178,7 +178,7 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  color: orange;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
@@ -203,7 +203,7 @@ input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
   color: yellow;
-  border-color: #888;
+  border-color: white;
   outline: 0; }
 .button.button-primary,
 button.button-primary,
