--- a/views/register.jade
+++ b/views/register.jade
@@ -53,7 +53,7 @@ html(lang='en')
     .container
         .header
             h1
-                | Register for xcontract
+                | Register your dApp
         .twelve.columns
             p
                 | Please include your contract address and dApp name
