--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,3 @@
-p{
-    color: white;
-}
-
 img{
   max-width: 100%;
 }
@@ -27,11 +23,6 @@ h5{
   color: yellow;
 }
 
-h1{
-  color: yellow;
-}
-
-
 
 html, body, #container {
   /*height: 90%;*/
@@ -54,6 +45,21 @@ body {
 html{
 /*  position:relative;*/
   background-size: 100%;
+}
+
+/*p{*/
+    /*color: white;*/
+/*}*/
+
+h6, p{
+    font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+    color: white;
+}
+
+h1{
+    /*font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;*/
+    font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+    color: white;
 }
 
 .header{
@@ -98,7 +104,7 @@ li {
 
 li a {
     display: block;
-    color: lightblue;
+    color: white;
     text-align: left;
     padding: 14px 16px;
     text-decoration: none;
@@ -112,16 +118,13 @@ li a {
 }
 
 li a:hover {
-    background-color: yellow;
+    background-color: black;
 }
 
-.active{
-  color: yellow;
-}
+/*.active{*/
+  /*color: white;*/
+/*}*/
 
-p{
-    color: orange;
-}
 
 input
 {
