--- a/public/stylesheets/skeleton.css
+++ b/public/stylesheets/skeleton.css
@@ -178,7 +178,7 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: orange;
+  color: white;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
