change button text on index

--- a/views/index.jade
+++ b/views/index.jade
@@ -64,7 +64,7 @@ html(lang='en')
           p Here is the contract address:
           textarea#contractAddress(name='contractAddress', placeholder="Paste the smart contract's address here" ) #{addressVal}
           p
-          button#submit Submit contract
+          button#submit Run Contract
 
         #paramAndFunctionDiv
             h6 #{functionTitle}
