add about us tab

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -121,6 +121,14 @@ li a:hover {
     background-color: black;
 }
 
+#functionsDiv{
+    float: right;
+}
+
+#paramDiv{
+    float: left;
+}
+
 /*.active{*/
   /*color: white;*/
 /*}*/
