--- a/views/register.jade
+++ b/views/register.jade
@@ -49,6 +49,8 @@ html(lang='en')
                     a(href="/search") Search
                 li
                     a(href="/register") Register
+                li
+                    a(href="http://www.bitfwd.xyz/") About us
 
     .container
         .header
