--- a/views/search.jade
+++ b/views/search.jade
@@ -47,6 +47,8 @@ body
                 a(href="/search") Search
             li
                 a(href="/register") Register
+            li
+                a(href="http://www.bitfwd.xyz/") About us
 
 .container
     .header
