params and function buttons go one after the other rather than clustered together

--- a/views/index.jade
+++ b/views/index.jade
@@ -76,20 +76,29 @@ html(lang='en')
             each functionName in functionNames
               div(id="function" + index)
                 button(name=functionName, id=functionName + "&" + index) #{functionName}
-                -index++
-            #paramDiv
-              -var index = 0;
-              each param in functionParams
-                div(id = index)
-                  if(param != undefined)
-                    textarea(value=param, placeholder = functionNames[index].toUpperCase() +
-                    " parameters: " + param, id = param + index,
-                    readonly = readOnlyAttribute[index])
-                  else
-                    textarea(value=param, placeholder = functionNames[index].toUpperCase() +
-                    " has no parameters", id = param + index,
-                    readonly = readOnlyAttribute[index])
-                  -index++
+
+              if(functionParams[index] != undefined)
+                textarea(value=functionParams[index], placeholder = functionNames[index].toUpperCase() +
+                " parameters: " + functionParams[index], id = functionParams[index] + index,
+                readonly = readOnlyAttribute[index])
+              else
+                textarea(value=functionParams[index], placeholder = functionNames[index].toUpperCase() +
+                " has no parameters", id = functionParams[index] + index,
+                readonly = readOnlyAttribute[index])
+              -index++
+            //#paramDiv
+            //  -var index = 0;
+            //  each param in functionParams
+            //    div(id = index)
+            //      if(param != undefined)
+            //        textarea(value=param, placeholder = functionNames[index].toUpperCase() +
+            //        " parameters: " + param, id = param + index,
+            //        readonly = readOnlyAttribute[index])
+            //      else
+            //        textarea(value=param, placeholder = functionNames[index].toUpperCase() +
+            //        " has no parameters", id = param + index,
+            //        readonly = readOnlyAttribute[index])
+            //      -index++
 
 
       .twelve.columns
